Ruslan Bikineev: added first test